# coco-keypoint-estimation

./: LICENSE  README - Copy.md  README.md  config.py  dataset.py  loss.py  main.py  model.py  pyproject.toml  train.py  utils.py  visualization.py
wandb/run-20251105_122004-0v6kvzps/: run-0v6kvzps.wandb
wandb/run-20251105_122004-0v6kvzps/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251105_122937-3hiru16k/: run-3hiru16k.wandb
wandb/run-20251105_122937-3hiru16k/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251105_133508-j3zepwva/: run-j3zepwva.wandb
wandb/run-20251105_133508-j3zepwva/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
